[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
talisman = "^0.1.0"
waitress = "^2.1.2"
WTForms = "^3.0.1"
bleach = "^5.0.1"
Flask-Admin = "^1.6.0"
Flask-Login = "^0.6.2"
flask-sqlalchemy = "^3.0.1"
Flask-WTF = "^1.0.1"
Flask-Markdown = "^0.3"
flask-talisman = "^1.0.0"
jwt = "^1.3.1"
PyJWT = "^2.6.0"
flask-ipban = "^1.1.5"
Pillow = "^9.2.0"
Flask-Migrate = "^3.1.0"
Flask-Htmldoom = "^0.2.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"